Add the basic styles

--- a/source/index.html
+++ b/source/index.html
@@ -33,14 +33,14 @@
     <main class="page__main main">
       <h1 class="visually-hidden">Сайт для поиска тура по Европе</h1>
       <section class="main__intro intro">
-        <h2 class="intro__caption">Путешествие по Европе</h2>
+        <h2 class="intro__caption">Путешествие<br> по Европе</h2>
         <p class="intro__lead">В этом туре вы откроете для себя Европу в новом свете. Вас ждет: море, горы, а также
           потрясающая красота природы.</p>
         <a class="intro__tour-link" href="#">Смотреть тур</a>
       </section>
 
       <section class="main__places places">
-        <h2 class="places__caption">Места посещения</h2>
+        <h2 class="places__caption">Места<br> посещения</h2>
         <p class="places__description">Вы можете выбрать полный тур или
           <br> частичный, с посещением первых 3 мест</p>
           <ul class="places__list">
@@ -89,11 +89,11 @@
           <li class="detals__tab-block" data-country ="1">
             <article class="detals__country">
               <h3 class="detals__country-caption">Греция</h3>
-              <p class="detals__country-description">На севере Греции находится один из крупнейших комплексов монастырей, расположенных на вершинах скал. Название его «Метеора» буквально переводится как «висящие в воздухе». Этот монастырь основная цель нашего путешествия в Греции. После покарения скал из песчанника и обломочной горной породы, достигающих в высоту 600 метров, наградой будет неописуемая красота природы и атмосфера, царящая в монастырях Метеоры. </p>
+              <p class="detals__country-text">На севере Греции находится один из крупнейших комплексов монастырей, расположенных на вершинах скал. Название его «Метеора» буквально переводится как «висящие в воздухе». Этот монастырь основная цель нашего путешествия в Греции. После покарения скал из песчанника и обломочной горной породы, достигающих в высоту 600 метров, наградой будет неописуемая красота природы и атмосфера, царящая в монастырях Метеоры. </p>
               <a class="detals__country-buy-link">купить тур сейчас</a>
               <div class="detals__country-reviews">
-                <h4>Отзывы</h4>
-                <p class="detals__reviews-caption">Метеоры в Греции можно сравнить разве что с Монсерратт в Испании. Такие же высоченные скалы. Но здесь потрясает масштаб. Огромная территория, высоко в горах. Ощущение такое, как будто стоишь на краю света! </p>
+                <h4 class="detals__reviews-caption">Отзывы</h4>
+                <p class="detals__country-reviews-text">Метеоры в Греции можно сравнить разве что с Монсерратт в Испании. Такие же высоченные скалы. Но здесь потрясает масштаб. Огромная территория, высоко в горах. Ощущение такое, как будто стоишь на краю света! </p>
                 <p class="detals__author">
                   <img class="detals__author-userpic" src="img/golicyna.png" alt="Изображение автора" width="38" height="38">
                   <span class="detals__author-name">Влада Голицина</span>
@@ -104,11 +104,11 @@
           <li class="detals__tab-block visually-hidden" data-country ="2">
             <article class="detals__country">
               <h3 class="detals__country-caption">Албания</h3>
-              <p class="detals__country-description">В Албании мы посетим Курорт Ксамиль. Этот курорт поразит вас чистейшей водой и удивительным пляжем. Вначале кажется, что на пляже вас встречает обычный, правда невероятно белоснежный и слишком крупный песок. Однако, присмотревшись, можно понять, что это не песок, а камни, перетёртые до такого мелкого состояния. </p>
+              <p class="detals__country-text">В Албании мы посетим Курорт Ксамиль. Этот курорт поразит вас чистейшей водой и удивительным пляжем. Вначале кажется, что на пляже вас встречает обычный, правда невероятно белоснежный и слишком крупный песок. Однако, присмотревшись, можно понять, что это не песок, а камни, перетёртые до такого мелкого состояния. </p>
               <a class="detals__country-buy-link">купить тур сейчас</a>
               <div class="detals__country-reviews">
-                <h4>Отзывы</h4>
-                <p class="detals__reviews-caption">Замечательный курорт, обязательно стоит посетить. В следующий раз возьму с собой сестру, чтобы тоже смогла вкусить все красоты природы :)</p>
+                <h4 class="detals__reviews-caption">Отзывы</h4>
+                <p class="detals__country-reviews-text">Замечательный курорт, обязательно стоит посетить. В следующий раз возьму с собой сестру, чтобы тоже смогла вкусить все красоты природы :)</p>
                 <p class="detals__author">
                   <img class="detals__author-userpic" src="img/marishka.png" alt="Изображение автора" width="38" height="38">
                   <span class="detals__author-name">Маришка</span>
@@ -118,11 +118,11 @@
           </li>
           <li class="detals__tab-block visually-hidden" data-country ="3"><article class="detals__country">
             <h3 class="detals__country-caption">Македония</h3>
-            <p class="detals__country-description">В Македонии нашей целью будет посетить Палаошник, который расположился в удивительно красивой лесистой местности возле Охридского озера и Самуиловой твердыни. А также мы заберемся на вершину горы Татичев Камен где находится  археологический памятник Кокино в длину около 100 метров.</p>
+            <p class="detals__country-text">В Македонии нашей целью будет посетить Палаошник, который расположился в удивительно красивой лесистой местности возле Охридского озера и Самуиловой твердыни. А также мы заберемся на вершину горы Татичев Камен где находится  археологический памятник Кокино в длину около 100 метров.</p>
             <a class="detals__country-buy-link">купить тур сейчас</a>
             <div class="detals__country-reviews">
-              <h4>Отзывы</h4>
-              <p class="detals__reviews-caption">Я бы сказал необычное старое здание. В архитектуре я не разбираюсь, но подъем в гору был очень веселым так как люди оказались легкими и заводными. Красота природы впечатлила, особенно после долгого пути в гору.</p>
+              <h4 class="detals__reviews-caption">Отзывы</h4>
+              <p class="detals__country-reviews-text">Я бы сказал необычное старое здание. В архитектуре я не разбираюсь, но подъем в гору был очень веселым так как люди оказались легкими и заводными. Красота природы впечатлила, особенно после долгого пути в гору.</p>
               <p class="detals__author">
                 <img class="detals__author-userpic" src="img/kuzmin.png" alt="Изображение автора" width="38" height="38">
                 <span class="detals__author-name">Михаил Кузьмин</span>
@@ -131,11 +131,11 @@
           </article></li>
           <li class="detals__tab-block visually-hidden" data-country ="4"><article class="detals__country">
             <h3 class="detals__country-caption">Черногория</h3>
-            <p class="detals__country-description">Черногория удивит нас самым большим в Европе каньоном реки Тара, который в некоторых местах высотой берегов доходит до 1300 метров, а шириной не превышает трех. При этом длина каньона составляет 80 км. </p>
+            <p class="detals__country-text">Черногория удивит нас самым большим в Европе каньоном реки Тара, который в некоторых местах высотой берегов доходит до 1300 метров, а шириной не превышает трех. При этом длина каньона составляет 80 км. </p>
             <a class="detals__country-buy-link">купить тур сейчас</a>
             <div class="detals__country-reviews">
-              <h4>Отзывы</h4>
-              <p class="detals__reviews-caption">Неописуемой красоты каньон! Ничего прекраснее в жизни не видела, разве что в фильмах :) Всем советую</p>
+              <h4 class="detals__reviews-caption">Отзывы</h4>
+              <p class="detals__country-reviews-text">Неописуемой красоты каньон! Ничего прекраснее в жизни не видела, разве что в фильмах :) Всем советую</p>
               <p class="detals__author">
                 <img class="detals__author-userpic" src="img/may.png" alt="Изображение автора" width="38" height="38">
                 <span class="detals__author-name">Анастасия Мей</span>
@@ -146,11 +146,11 @@
           <li class="detals__tab-block visually-hidden" data-country ="5">
             <article class="detals__country">
               <h3 class="detals__country-caption">Хорватия</h3>
-              <p class="detals__country-description">В Хорватии мы посетим необычайную пещеру названную Бередине. Ее подземный мир увлечет вас на 80-ти метровую глубину через 5 освещенных залов, украшенных удивительными нерукотворными скульптурами —  сталактитами и сталагмитами —  формировавшимися тысячи и тысячи лет.</p>
+              <p class="detals__country-text">В Хорватии мы посетим необычайную пещеру названную Бередине. Ее подземный мир увлечет вас на 80-ти метровую глубину через 5 освещенных залов, украшенных удивительными нерукотворными скульптурами —  сталактитами и сталагмитами —  формировавшимися тысячи и тысячи лет.</p>
               <a class="detals__country-buy-link">купить тур сейчас</a>
               <div class="detals__country-reviews">
-                <h4>Отзывы</h4>
-                <p class="detals__reviews-caption">Мы поехали всей семьей, я, моя жена и родители. Пещера просто незабываема! А то, что все это формировалось тысячелетиями, мега необычно. Первоначально даже не верилось, но натур ни с чем не спутать по итогу :)</p>
+                <h4 class="detals__reviews-caption">Отзывы</h4>
+                <p class="detals__country-reviews-text">Мы поехали всей семьей, я, моя жена и родители. Пещера просто незабываема! А то, что все это формировалось тысячелетиями, мега необычно. Первоначально даже не верилось, но натур ни с чем не спутать по итогу :)</p>
                 <p class="detals__author">
                   <img class="detals__author-userpic" src="img/mulicyn.png" alt="Изображение автора" width="38" height="38">
                   <span class="detals__author-name">Владимир Мулицин</span>
@@ -159,19 +159,15 @@
             </article>
           </li>
         </ul>
-
-
       </section>
-
-
 
       <section class="main__prices prices">
         <h2 class="visually-hidden">Цены</h2>
         <div class="prices__offer prices__offer--complex">
           <h2 class="visually-hidden">Комплексный тариф</h2>
           <p class="prices__tariff prices__tariff--complex">
-            <b>Комплексный</b>
-            <b>$1999</b>
+            <b class="prices__tariff-name">Комплексный</b>
+            <b class="prices__tariff-price">$1999</b>
           </p>
           <p class="prices__offer-description">Ознакомьтесь с перечнем того, что входит в данный пакет </p>
           <ul class="prices__offer-list">
@@ -185,8 +181,8 @@
         <div class="prices__offer prices__offer--econom">
           <h2 class="visually-hidden">Экономныйный тариф</h2>
           <p class="prices__tariff prices__tariff--econom">
-            <b>Экономный</b>
-            <b>$1399</b>
+            <b class="prices__tariff-name">Экономный</b>
+            <b class="prices__tariff-price">$1399</b>
           </p>
           <p class="prices__offer-description">Ознакомьтесь с перечнем того, что входит в данный пакет </p>
           <ul class="prices__offer-list">
@@ -199,8 +195,8 @@
           <a class="prices__buy-link" href="#">купить тур сейчас</a>
         </div>
         <div class="prices__offer prices__offer--reach-agreement">
-          <h2 class="prices__capture prices__capture--reach-agreement">Цены</h2>
-          <p class="prices__description prices__description--reach-agreement">Специально для Вас мы разработали 2 пакета
+          <h2 class="prices__capture">Цены</h2>
+          <p class="prices__description">Специально для Вас мы разработали 2 пакета
             цен с разными условиями, отталкиваясь от Ваших потребностей и возможностей. Выберите для себя лучший вариант
             отпуска и отдохните на все 100%! </p>
           <p class="prices__call-us-text">Свяжитесь с нами</p>
@@ -223,7 +219,7 @@
                 <input class="feedback__field feedback__field--email" type="email" name="email" placeholder="E-mail">
               </p>
             </div>
-            <button class="feedback__btn primary-link primary-link--feedback">Отправить</button>
+            <button class="feedback__button">Отправить</button>
           </form>
         </div>
 
@@ -232,8 +228,8 @@
 
     <footer class="page__footer footer">
       <section class="footer__next-trips">
-        <h3>Следующие путешествия</h3>
-        <ul>
+        <h3 class="footer__caption">Следующие путешествия</h3>
+        <ul class="footer__next-trips-list">
           <li>Марсель</li>
           <li>Ним</li>
           <li>Монпелье</li>
@@ -253,14 +249,14 @@
 
       </section>
       <section class="footer__contacts">
-        <h3>Наши контакты</h3>
-        <p><a href="mailto:puteshestviemechta@gmail.ru">puteshestviemechta@gmail.ru</a></p>
-        <p><a href="tel:+749978468446">+7 (499) -784-684-46</a></p>
+        <h3 class="footer__caption">Наши контакты</h3>
+        <p><a class="footer__contacts-email" href="mailto:puteshestviemechta@gmail.ru">puteshestviemechta@gmail.ru</a></p>
+        <p><a class="footer__contacts-tel" href="tel:+749978468446">+7 (499) -784-684-46</a></p>
 
       </section>
       <section class="footer__corporative-offers">
-        <h3>Корпоративные путешествия</h3>
-        <p>Также вы можете заказать индивидуальное путешествие под вашу компанию. Подобные туры очень сближают компанию,
+        <h3 class="footer__caption">Корпоративные путешествия</h3>
+        <p class="footer__corporative-offers-description">Также вы можете заказать индивидуальное путешествие под вашу компанию. Подобные туры очень сближают компанию,
           помогают поддерживать корпоративный дух, а также являются оличным времяпрепровождением</p>
       </section>
     </footer>
